@@ -1,25 +1,30 @@
 package com.dehold.contentmanager.content.blogpost.export;
 
 import com.dehold.contentmanager.content.blogpost.model.BlogPost;
+import com.dehold.contentmanager.content.customersupport.model.SupportRequest;
+import com.dehold.contentmanager.content.customersupport.model.SupportResponse;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.StringJoiner;
 
 /**
- * Simple CSV converter for ExportResponse. Produces a concatenated CSV with sections for each content type.
- * This is intentionally simple and avoids external CSV libraries.
+ * CSV converter for the combined ExportResponse (BlogPosts, SupportRequests, SupportResponses).
+ * Produces three labeled sections with header rows. Values are quoted and internal quotes doubled.
  */
 public final class ExportCsvConverter {
 
     private ExportCsvConverter() {}
 
-    public static byte[] toCsvBytes(List<BlogPost> resp) {
+    public static byte[] toCsvBytes(ExportResponse resp) {
         StringBuilder sb = new StringBuilder();
 
-        // Blog posts section
-        sb.append(csvHeader(List.of("id", "title", "content", "createdAt", "updatedAt", "userId")));
-        for (BlogPost b : resp) {
+        // BlogPosts section
+        sb.append("# BlogPosts\n");
+        sb.append(csvHeader(List.of("id","title","content","createdAt","updatedAt","userId")));
+        for (BlogPost b : Optional.ofNullable(resp.getBlogPosts()).orElse(Collections.emptyList())) {
             sb.append(csvLine(List.of(
                     safe(b.getId() == null ? "" : b.getId().toString()),
                     safe(b.getTitle()),
@@ -30,6 +35,38 @@ public final class ExportCsvConverter {
             )));
         }
         sb.append('\n');
+
+        // SupportRequests section
+        sb.append("# SupportRequests\n");
+        sb.append(csvHeader(List.of("id","userId","text","customerId","createdAt","updatedAt")));
+        for (SupportRequest r : Optional.ofNullable(resp.getSupportRequests()).orElse(Collections.emptyList())) {
+            sb.append(csvLine(List.of(
+                    safe(r.getId() == null ? "" : r.getId().toString()),
+                    safe(r.getUserId() == null ? "" : r.getUserId().toString()),
+                    safe(r.getText()),
+                    safe(r.getCustomerId() == null ? "" : r.getCustomerId().toString()),
+                    safe(r.getCreatedAt() == null ? "" : r.getCreatedAt().toString()),
+                    safe(r.getUpdatedAt() == null ? "" : r.getUpdatedAt().toString())
+            )));
+        }
+        sb.append('\n');
+
+        // SupportResponses section
+        sb.append("# SupportResponses\n");
+        sb.append(csvHeader(List.of("id","supportRequestId","userId","text","createdAt","updatedAt")));
+
+        for (SupportResponse s : Optional.ofNullable(resp.getSupportResponses()).orElse(Collections.emptyList())) {
+            sb.append(csvLine(List.of(
+                    safe(s.getId() == null ? "" : s.getId().toString()),
+                    safe(s.getSupportRequest() == null ? "" : s.getSupportRequest().toString()),
+                    safe(s.getUserId() == null ? "" : s.getUserId().toString()),
+                    safe(s.getText()),
+                    safe(s.getCreatedAt() == null ? "" : s.getCreatedAt().toString()),
+                    safe(s.getUpdatedAt() == null ? "" : s.getUpdatedAt().toString())
+            )));
+        }
+        sb.append('\n');
+
         return sb.toString().getBytes(StandardCharsets.UTF_8);
     }
 
@@ -39,15 +76,13 @@ public final class ExportCsvConverter {
 
     private static String csvLine(List<String> cols) {
         StringJoiner sj = new StringJoiner(",", "", "\n");
-        for (String c : cols) {
-            sj.add(quote(c));
-        }
+        for (String c : cols) sj.add(quote(c));
         return sj.toString();
     }
 
     private static String quote(String s) {
         if (s == null) s = "";
-        String escaped = s.replace("\"", "\"\""); // double quotes
+        String escaped = s.replace("\"", "\"\""); // escape double quotes by doubling
         return "\"" + escaped + "\"";
     }
 
@@ -55,4 +90,3 @@ public final class ExportCsvConverter {
         return s == null ? "" : s;
     }
 }
-
